kubernetes/frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        app: frontend
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/std-022-039/sausage-store/frontend:1.0.1080180
          imagePullPolicy: IfNotPresent
          ports:
            - name: frontend
              containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf 
      imagePullSecrets:
        # - name: regcred
        - name: docker-config-secret
