kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
spec:
  # В кластере может быть несколько Ingress Controllers, мы используем NGINX
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "paidyutov-daniil-22.k8s.praktikum-services.tech"
  rules:
    # Хост определяет правило направления траффика по доменному имени
    - host: "paidyutov-daniil-22.k8s.praktikum-services.tech"
      http:
        # Для различных путей в URL можно указать различные бэкенд-сервисы
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              # Заранее создан сервис типа ClusterIP
              # Он выступает в качестве бэкенда нашего Ingress
              name: frontend
              port:
                # У сервиса может быть несколько портов, указываем нужный нам
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8080
